@@ -9,9 +9,9 @@ files[] = src/SearchApiAutocompleteSuggesterInterface.php
 files[] = src/SearchApiAutocompleteSuggesterPluginBase.php
 files[] = src/SearchApiAutocompleteServerSuggester.php
 
-; Information added by Drupal.org packaging script on 2015-08-29
-version = "7.x-1.4"
+; Information added by Drupal.org packaging script on 2017-07-18
+version = "7.x-1.5"
 core = "7.x"
 project = "search_api_autocomplete"
-datestamp = "1440839643"
+datestamp = "1500368062"
 
